# SpiderBoot

./: README.md  config.properties
DlVideo/: .classpath  .project  pom.xml
HMIApp/: .classpath  .project  pom.xml
RenderApp/: .classpath  .project  pom.xml
SpiderBootApp/: .project  pom.xml
SpiderFramework/: .project  pom.xml
SpiderManager/: .classpath
UploadApp/: .classpath  .project  pom.xml
YoutubeAgent/: .classpath  .project  pom.xml
api-samples-master/: .classpath
ffmpeg-cli-wrapper-master/: .classpath  .project  pom.xml
netxms_2.2.1/: .autotools  .cproject  .project  Makefile  Makefile.in  aclocal.m4  build_server_netxms  config.h  config.h.in  config.h.in~  config.status  configure  configure.ac  libtool  netxms-build-tag.h  netxms.sln  out  outptut
netxms_2.2.1/src/agent/libnxagent/: Makefile  Makefile.am  Makefile.in  libnxagent.la  libnxagent_la-bridge.lo  libnxagent_la-cmdexec.lo  libnxagent_la-dfile_info.lo  libnxagent_la-main.lo  libnxagent_la-registry.lo  libnxagent_la-tools.lo
netxms_2.2.1/src/agent/libnxagent/.deps/: libnxagent_la-bridge.Plo  libnxagent_la-cmdexec.Plo  libnxagent_la-dfile_info.Plo  libnxagent_la-main.Plo  libnxagent_la-registry.Plo  libnxagent_la-tools.Plo
netxms_2.2.1/src/agent/libnxagent/.libs/: libnxagent.la  libnxagent.lai  libnxagent.so.2  libnxagent.so.2.0.0  libnxagent.so.2.0.0T
spider-manager/: .classpath  .project  config.properties
spider_download_app/: pom.xml
spider_framework/: pom.xml
spider_hmiapp/: .classpath  build.properties
spider_render_app/: .classpath  pom.xml
vget-master/: .project  (+4 more)
(+3934 files in other folders)
